--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -43,11 +43,8 @@
       <% } %>   
       
           <!-- Personal Milestones -->
-          <div class="box hidden-print">
+         <!--  <div class="box hidden-print">
             <h2>Personal Milestones</h2>
-            <div class="alert alert-success">
-            <p> The Milestones below are provided to give you an idea of who I am and my interests. These will not print. </p>
-            </div>
 	    <ul id="education" class="clearfix">
        <% getlist(Milestone).each{|ms| %>
               <li>
@@ -61,9 +58,9 @@
               <li>
               <li>
             </ul>
-          </div>
-              </div>
-        </div>
+          </div> -->
+              </div> 
+        </div> 
         <div class="col-xs-12 col-sm-5">
           <!-- CONTACT -->
           <div class="box clearfix hidden-print">
