Broke templates into partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   ga('send', 'pageview');
 
 </script>
-  <title><%= @resume.company %></title>
+  <title><%= @resume.company if @resume.present? %></title>
   </head>
   <body>
 
